--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
       matrix:
         node-version: [20.x]
 
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v3
 
